--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "engines": {
+    "node": "16.18.0"
   }
 }
